# Leave-Management-System

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  RAILWAY_DEPLOYMENT.md  README.md  SYSTEM_DESIGN.md  create_sample_data.py  deploy-railway.sh  pyproject.toml  railway-simple.toml  railway.toml  setup.bat  setup.sh
app/: database.py  main.py  models.py  routes.py  schemas.py  services.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  railway.toml
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/employees/: page.tsx
frontend/src/app/employees/[id]/: page.tsx
frontend/src/app/employees/new/: page.tsx
frontend/src/app/leaves/: page.tsx
frontend/src/app/leaves/apply/: page.tsx
frontend/src/components/dashboard/: dashboard-stats.tsx  quick-actions.tsx  recent-leaves.tsx
frontend/src/components/employees/: employee-details.tsx  employee-form.tsx  employee-list.tsx
frontend/src/components/layout/: header.tsx  main-layout.tsx
frontend/src/components/leaves/: leave-application-form.tsx  leave-requests-list.tsx
frontend/src/hooks/: use-employees.ts  use-leaves.ts
frontend/src/lib/: api.ts  types.ts  validations.ts
tests/: conftest.py  test_employees.py  test_leave_requests.py  test_services.py
